[Minio] use correct sc type

--- a/cluster/apps/database-system/minio/persistent-volume-claim.yaml
+++ b/cluster/apps/database-system/minio/persistent-volume-claim.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: minio-nfs
+  storageClassName: nfs-csi
   resources:
     requests:
       storage: 1Mi
