[Minio] use correct sc type

--- a/cluster/apps/database-system/minio/persistent-volume-claim.yaml
+++ b/cluster/apps/database-system/minio/persistent-volume-claim.yaml
@@ -8,6 +8,7 @@ spec:
   accessModes:
     - ReadWriteMany
   storageClassName: nfs-csi
+  volumeName: media-pv
   resources:
     requests:
       storage: 1Mi
