[Postgres] attempt fix helm release

--- a/cluster/apps/database-system/postgres/helm-release.yaml
+++ b/cluster/apps/database-system/postgres/helm-release.yaml
@@ -22,10 +22,11 @@ spec:
       registry: public.ecr.aws
       repository: bitnami/postgresql
     architecture: standalone
-    auth:
-      username: root
-      database: root
-      existingSecret: postgres-secrets
+    global:
+      auth:
+        username: root
+        database: root
+        existingSecret: postgres-secrets
     primary:
       service:
         type: LoadBalancer
