--- a/cluster/apps/database-system/postgres/helm-release.yaml
+++ b/cluster/apps/database-system/postgres/helm-release.yaml
@@ -10,12 +10,21 @@ spec:
     spec:
       # renovate: registryUrl=https://charts.bitnami.com/bitnami
       chart: postgresql
-      version: 11.3.0
+      version: 11.2.6
       sourceRef:
         kind: HelmRepository
         name: bitnami-charts
         namespace: flux-system
       interval: 5m
+  valuesFrom:
+    - kind: Secret
+      name: postgres-secrets
+      targetPath: global.postgresql.auth.password
+      valuesKey: password
+    - kind: Secret
+      name: postgres-secrets
+      targetPath: global.postgresql.auth.postgresPassword
+      valuesKey: postgres-password
   values:
     fullnameOverride: postgres
     image:
@@ -27,6 +36,14 @@ spec:
         username: root
         database: root
         existingSecret: postgres-secrets
+        secretKeys:
+          adminPasswordKey: postgres-password
+          userPasswordKey: password
+          replicationPasswordKey: replication-password
+    auth:
+      username: root
+      database: root
+      existingSecret: postgres-secrets
     primary:
       service:
         type: LoadBalancer
