--- a/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
+++ b/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
@@ -43,23 +43,35 @@ spec:
               - "vendor"
               - "device"
           custom:
-            - name: "intel-gpu"
+            - name: intel-gpu
               matchOn:
                 - pciId:
                     class: ["0300"]
                     vendor: ["8086"]
-            - name: "zwave"
+            - name: zwave
               matchOn:
                 - usbId:
                     class: ["ff"]
                     vendor: ["10c4"]
                     device: ["8a2a"]
-            - name: "zigbee"
+            - name: zigbee
               matchOn:
                 - usbId:
                     class: ["ff"]
                     vendor: ["10c4"]
                     device: ["8a2a"]
+            - name: esp32
+              matchOn:
+                - usbId:
+                    class: ["ff"]
+                    vendor: ["10c4"]
+                    device: ["ea60"]
+            - name: ups
+              matchOn:
+                - usbId:
+                    class: ["ff"]
+                    vendor: ["0764"]
+                    device: ["0501"]
       annotations:
         configmap.reloader.stakater.com/reload: "nfd-worker-conf"
       tolerations:
