[NUT] add nut tools

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -16,6 +16,7 @@ stringData:
     SMTP_USERNAME: ENC[AES256_GCM,data:Uzu6tJI1OCZYMK+5,iv:PATilIaQz7mxdol3QrDUCO7kByPLDgtql/QvO2u7hDk=,tag:WBtjRss3PYGsbBviYG32Og==,type:str]
     SMTP_PASSWORD: ENC[AES256_GCM,data:TR6H+CbZ9/8cmqKjWZWG7A==,iv:kLmFnm5h9A7Sxbyt3HV6u+mR2361TznzJwoZa00LlWQ=,tag:2ldMN0t05h1vP/8Jg5rYmg==,type:str]
     SMTP_PORT: ENC[AES256_GCM,data:T+rt,iv:FS1gVE0zKXDvzgj67s/0CITpmZ1Gkjbim1IeLeX44Gc=,tag:uFZOXx3Alanx2lwxtzGpyQ==,type:str]
+    NUT_PASSWORD: ENC[AES256_GCM,data:Cl0yVpoB1imCt+VELqxpXmbMjcns9P9l/w==,iv:ZRa1Z86kpNZOW/9F0G23/6lmzd2q5BaC+fjXCysuMVM=,tag:C8BBQsrLkanrmQGcWMQFmw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -31,8 +32,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-14T02:43:27Z"
-    mac: ENC[AES256_GCM,data:4SA6mIdd4YsWiOp479HRV8ZSo/y4IR+6RQBa5/PkUpQyk7Z0UfFeg/ejJA4cSqVEWoSQWtC0xzQsY9iDN1CwQgSX2cTyBGwe3qn72e7j4oQHbeOb2+E5wfMQt8XFSc2uFHq5+dVQ3yPTZhZNvOaNZZmE+IcUqdpjevWX8b8t4mc=,iv:juS5HV+ksq8+s0be6cg1DfoeSPx1g2rQEds/EyxaMpo=,tag:4xW9LjHt5I8ZbvS+DfJoxg==,type:str]
+    lastmodified: "2022-05-31T03:22:56Z"
+    mac: ENC[AES256_GCM,data:cpj6ycCDPtvnnD2+pxxKJNGonQwKZK+Oc5uw+SRefM9HTLKcVe13prwcENVO1dNvV1qrW9+pvCvC2xnjShVloD09k5WeE90f8ArQ55rRVjaBgmBu7GTkzb+3z91kk68WRBANc4lcuflbVuLNB67HiLjptSayvhN9o3aCsv7h8pc=,iv:/q+UNdohljTeKRhvb+YGpuKAWX5kDZq+Fs6FMEQQUFw=,tag:HeUvquox1D/1aNBp9LRcMQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
