--- a/cluster/apps/monitoring/network-ups-tools/helm-release.yaml
+++ b/cluster/apps/monitoring/network-ups-tools/helm-release.yaml
@@ -42,7 +42,10 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
         hosts:
-          - &host nut.${CLUSTER_DOMAIN}
+          - host: &host nut.${CLUSTER_DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
           - hosts:
               - *host
