[NUT] add nut tools

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -151,6 +151,12 @@ spec:
           gnetId: 13502
           revision: 10
           datasource: Prometheus
+      power:
+        # Ref: https://grafana.com/grafana/dashboards/14371
+        nut:
+          gnetId: 14371
+          revision: 1
+          datasource: Prometheus
     sidecar:
       datasources:
         enabled: true
