--- a/cluster/apps/monitoring/network-ups-tools/helm-release.yaml
+++ b/cluster/apps/monitoring/network-ups-tools/helm-release.yaml
@@ -35,21 +35,7 @@ spec:
             port: 3493
     ingress:
       main:
-        enabled: true
-        annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
-          kubernetes.io/ingress.class: traefik
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
-        hosts:
-          - host: &host nut.${CLUSTER_DOMAIN}
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
-            secretName: nut-tls
+        enabled: false
     persistence:
       ups:
         enabled: true
