--- a/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
+++ b/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
@@ -70,7 +70,7 @@ spec:
             - name: cyberpower-ups
               matchOn:
                 - usbId:
-                    class: ["ff"]
+                    class: ["03"]
                     vendor: ["0746"]
                     device: ["0501"]
       annotations:
