--- a/cluster/apps/database-system/emqx/helm-release.yaml
+++ b/cluster/apps/database-system/emqx/helm-release.yaml
@@ -66,6 +66,7 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
         path: /
+        pathType: Prefix
         hosts:
           - &host "emqx.${CLUSTER_DOMAIN}"
         tls:
