[NPD] add node-problem-detector

--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - intel-gpu-plugin
   - metrics-server
   - node-feature-discovery
+  - node-problem-detector
   - reflector
   - reloader
