--- a/cluster/apps/home/paperless/helm-release.yaml
+++ b/cluster/apps/home/paperless/helm-release.yaml
@@ -59,6 +59,9 @@ spec:
       PAPERLESS_URL: https://{{ .Release.Name }}.${CLUSTER_DOMAIN}
       PAPERLESS_REDIS: redis://redis-headless.database-system:6379
       PAPERLESS_DBHOST: ${NAS_ADDR}
+      PAPERLESS_DBUSER: ${PAPERLESS_DATABASE_USER}
+      PAPERLESS_DBNAME: ${PAPERLESS_DATABASE_NAME}
+      PAPERLESS_DBPASS: ${PAPERLESS_DATABASE_PASSWORD}
       PAPERLESS_ENABLE_HTTP_REMOTE_USER: "true"
       PAPERLESS_HTTP_REMOTE_USER_HEADER_NAME: HTTP_X_AUTHENTIK_USERNAME
 
