--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -17,6 +17,12 @@ stringData:
     SMTP_PASSWORD: ENC[AES256_GCM,data:TR6H+CbZ9/8cmqKjWZWG7A==,iv:kLmFnm5h9A7Sxbyt3HV6u+mR2361TznzJwoZa00LlWQ=,tag:2ldMN0t05h1vP/8Jg5rYmg==,type:str]
     SMTP_PORT: ENC[AES256_GCM,data:T+rt,iv:FS1gVE0zKXDvzgj67s/0CITpmZ1Gkjbim1IeLeX44Gc=,tag:uFZOXx3Alanx2lwxtzGpyQ==,type:str]
     NUT_PASSWORD: ENC[AES256_GCM,data:Cl0yVpoB1imCt+VELqxpXmbMjcns9P9l/w==,iv:ZRa1Z86kpNZOW/9F0G23/6lmzd2q5BaC+fjXCysuMVM=,tag:C8BBQsrLkanrmQGcWMQFmw==,type:str]
+    AUTHENTIK_DATABASE_USER: ENC[AES256_GCM,data:HUzBqiy/v90m,iv:3+zGvgWfh/49ShZXkGhmwSoM6ofBqIw738nemxlKKlc=,tag:JEuA6UlJvehRRHJiJSJIPA==,type:str]
+    AUTHENTIK_DATABASE_PASSWORD: ENC[AES256_GCM,data:TIP50P3oLPq97qjun0by/kyi1DCvW46nvjjsrApI1IpmJwDvY4qvATCUcb02y0bbAg==,iv:+g5NWkyf8DIXvhfMW4UDHyEuz0YZk7uTSQsqT67p9vU=,tag:4gQ+nliqCPqT5Hv6ofKTYg==,type:str]
+    AUTHENTIK_DATABASE_NAME: ENC[AES256_GCM,data:QeblqyeXA1jN,iv:uM43PGalk4+YoVfQCNSIKoQo8Llucr2hye1KsgynQcU=,tag:mTSl+iJuetjuqEDHTo32+g==,type:str]
+    PAPERLESS_DATABASE_USER: ENC[AES256_GCM,data:s/h0mFETZ/wK,iv:xQyuDNKJlPY6gTOvOYYeMTNTEGB+MlH8OW9q0kXGg8M=,tag:gbNyDimzPp9GXPrca02v1A==,type:str]
+    PAPERLESS_DATABASE_PASSWORD: ENC[AES256_GCM,data:9imIv5Puysg0+AkoKsM59E4GigeHuNo2FIU6YcQIT20=,iv:LJdn/OOqNXwlHx99O78UeDBnOG8cP8EFmJBUhta13Ao=,tag:0rjlnJUHCo4i6dz7ODVTgA==,type:str]
+    PAPERLESS_DATABASE_NAME: ENC[AES256_GCM,data:OwuQWwI6hxdt,iv:fxl3gbLB8vu9O1Pw/aDJKsxlp1I8WynBE04Nu+n3U8E=,tag:sXHESK4EE1w18WYfqjLCsA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,8 +38,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-31T03:22:56Z"
-    mac: ENC[AES256_GCM,data:cpj6ycCDPtvnnD2+pxxKJNGonQwKZK+Oc5uw+SRefM9HTLKcVe13prwcENVO1dNvV1qrW9+pvCvC2xnjShVloD09k5WeE90f8ArQ55rRVjaBgmBu7GTkzb+3z91kk68WRBANc4lcuflbVuLNB67HiLjptSayvhN9o3aCsv7h8pc=,iv:/q+UNdohljTeKRhvb+YGpuKAWX5kDZq+Fs6FMEQQUFw=,tag:HeUvquox1D/1aNBp9LRcMQ==,type:str]
+    lastmodified: "2022-06-05T05:54:41Z"
+    mac: ENC[AES256_GCM,data:p1EdghIHFzztKOsezktFjIodM+gWlXBS1ACKOP5cVzaky9R3DFf+G4oAaNF2NMXSbh9oPxeHBAioUi/jqYX5zRR7tpFSq7C/fuoWrV54CNnOKEYCj0vlVq64uHOEMoHU9wnep485202TZFmdCdNJTdfnEQzT6eRTLfmbl+QyQWo=,iv:zCgzci9A1RHt1LbX0Zxs7ynSqV/7SICkeiT9oS6fmyY=,tag:rI3cUN+C6mknnOVVQr0bsg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
