[EMQX] disable ingress, helm doesnt seem to work

--- a/cluster/apps/database-system/emqx/helm-release.yaml
+++ b/cluster/apps/database-system/emqx/helm-release.yaml
@@ -59,7 +59,7 @@ spec:
 
     ingress:
       dashboard:
-        enabled: true
+        enabled: false
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: traefik
