--- a/.taskfiles/ClusterTasks.yml
+++ b/.taskfiles/ClusterTasks.yml
@@ -136,8 +136,8 @@ tasks:
                 {
                   "name": "backups",
                   "nfs": {
-                    "server": '{{.NAS_ADDR | default "192.168.1.128"}}',
-                    "path": '{{.NAS_PATH | default "/volume1/shared/"}}'
+                    "server": "192.168.1.128",
+                    "path": "/volume1/shared/"
                   }
                 },
                 {
