--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -77,9 +77,20 @@ spec:
         existingClaim: minecraft-survival-v1
     extraVolumes:
       - volumeMounts:
+          - name: nfs
+            mountPath: /mods
+            subPath: mods
+            readOnly: true
           - mountPath: /config/plugins/BlueMap/
             name: bluemap-config
         volumes:
+          - name: nfs
+            server: ${NAS_ADDR}
+            path: /volume1/shared/minecraft
+            mountOptions:
+              - port=2049
+              - hard
+              - vers=4
           - configMap:
               defaultMode: 420
               name: minecraft-survival-bluemap-config
