[Minecraft] tweak settings

--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -32,12 +32,13 @@ spec:
       REPLACE_ENV_VARIABLES: "TRUE"
       REPLACE_ENV_DURING_SYNC: "TRUE"
       CFG_LP_SERVER: "global"
+      CF_SERVER_MOD: "All-of-Fabric-5-Server-1.2.4.zip"
     minecraftServer:
       eula: "TRUE"
       overrideServerProperties: true
       version: "1.18.2"
       jvmOpts: "-XX:MaxRAMPercentage=75"
-      type: "FABRIC"
+      type: "CURSEFORGE"
       difficulty: "hard"
       viewDistance: 20
       gameMode: survival
