--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -69,7 +69,7 @@ spec:
                   - path: /
                     pathType: Prefix
             tls:
-              - secretName: "mc-map-tls"
+              - secretName: mc-map-tls
                 hosts:
                   - *host
     persistence:
