[Minecraft] tweak settings

--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -16,7 +16,7 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    nameOverride: "aof"
+    nameOverride: minecraft
     image:
       repository: docker.io/itzg/minecraft-server
       tag: 2022.6.0
