--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -17,6 +17,7 @@ data:
   METALLB_POSTGRES_ADDR: 192.168.1.228
   METALLB_FACTORIO_ADDR: 192.168.1.229
   METALLB_SYNCTHING_ADDR: 192.168.1.230
+  METALLB_MINECRAFT_ADDR: 192.168.1.231
   NAS_ADDR: 192.168.1.128
   GATEWAY_IP: 192.168.1.1
   TZ: America/Vancouver
