[Minecraft] tweak settings

--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -47,6 +47,7 @@ spec:
       maxWorldSize: 29999983
       maxTickTime: -1
       memory: ""
+      serviceType: LoadBalancer
       loadBalancerIP: ${METALLB_MINECRAFT_ADDR}
       externalTrafficPolicy: Local
       rcon:
