--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -45,7 +45,7 @@ spec:
           traefik.ingress.kubernetes.io/router.middlewares: networking-external-no-error-pages@kubernetescrd
 
         hosts:
-          - host: &host "plex.${CLUSTER_DOMAIN}"
+          - host: &host plex.${CLUSTER_DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
