[MC] use online mod

--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
       viewDistance: 20
       gameMode: survival
       pvp: true
-      onlineMode: false
+      onlineMode: true
       maxWorldSize: 29999983
       maxTickTime: -1
       memory: ""
