--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -33,6 +33,7 @@ spec:
       REPLACE_ENV_DURING_SYNC: "TRUE"
       CFG_LP_SERVER: "global"
       CF_SERVER_MOD: Server-Files-0.4.11.zip
+      USE_MODPACK_START_SCRIPT: "false"
     minecraftServer:
       eula: "TRUE"
       overrideServerProperties: true
