--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
       CFG_LP_SERVER: "global"
       CF_SERVER_MOD: Server-Files-0.4.11.zip
       USE_MODPACK_START_SCRIPT: "false"
+      FORGE_INSTALLER: forge-1.18.2-40.1.31-installer.jar
     minecraftServer:
       eula: "TRUE"
       overrideServerProperties: true
