--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -32,7 +32,6 @@ spec:
       REPLACE_ENV_VARIABLES: "TRUE"
       REPLACE_ENV_DURING_SYNC: "TRUE"
       CFG_LP_SERVER: "global"
-      CF_SERVER_MOD: Server-Files-0.4.11.zip
       USE_MODPACK_START_SCRIPT: "false"
       FORGE_INSTALLER: forge-1.18.2-40.1.31-installer.jar
     minecraftServer:
@@ -40,7 +39,7 @@ spec:
       overrideServerProperties: true
       version: "1.18.2"
       jvmOpts: "-XX:MaxRAMPercentage=75"
-      type: "CURSEFORGE"
+      type: "FORGE"
       difficulty: "hard"
       viewDistance: 20
       gameMode: survival
