[Minecraft] expose map

--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -96,7 +96,7 @@ spec:
         existingClaim: minecraft-survival-v1
     extraVolumes:
       - volumeMounts:
-          - mountPath: /data/config/bluemap/core.conf
+          - mountPath: /data/config/bluemap
             name: bluemap-config
         volumes:
           - configMap:
