--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -98,6 +98,7 @@ spec:
       - volumeMounts:
           - mountPath: /data/config/bluemap
             name: bluemap-config
+            subPath: core.conf
         volumes:
           - configMap:
               defaultMode: 420
