[MC] change to gtnh

--- a/cluster/apps/game-system/minecraft/helm-release.yaml
+++ b/cluster/apps/game-system/minecraft/helm-release.yaml
@@ -60,6 +60,7 @@ spec:
       serviceType: LoadBalancer
       loadBalancerIP: ${METALLB_MINECRAFT_ADDR}
       externalTrafficPolicy: Local
+      levelType: rwg
       rcon:
         enabled: true
     persistence:
