--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       retries: 3
   values:
     image:
-      repository: esphome/esphome
+      repository: ghcr.io/esphome/esphome
       tag: 2022.6.0
     env:
       TZ: ${TZ}
